changed class name

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a href="">contact us</a></li>
                 </ul>
                 <form class="contact-form">
-                     <textarea id="textarea-top"class="textarea-top" required=""></textarea>
+                     <textarea id="textarea-top"class="textarea" required=""></textarea>
                      <label for="#textarea-top">type your message here</label>
                      <input class="contact-form-button" type="submit" value="send"/>
                 </form>
@@ -91,7 +91,7 @@
                 <footer class="footer">
                     <h2 class="title">CONTACT US</h2>
                     <form class="contact-form">
-                            <textarea id="textarea-bottom"class="textarea" required=""></textarea>
+                            <textarea id="textarea-bottom" class="textarea" required=""></textarea>
                             <label for="#textarea-bottom">type your message here</label>
                             <input class="contact-form-button" type="submit"  value="send"/>
                         </form>         
