add changes to responsive styles

--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
                 <section class='section carousel'>
                     <div class="slick-slider">
                       <div>
-                          <img src="img/slick-slide01.png" >
+                          <img src="img/slick-slide01.png" width="400" height="200">
                       </div>
                       <div>
-                          <img src="img/slick-slide02.png" >
+                          <img src="img/slick-slide02.png" width="400" height="200">
                       </div>
                       <div>
-                          <img src="img/slick-slide03.png">
+                          <img src="img/slick-slide03.png" width="400" height="200">
                       </div>
                       <div>
-                          <img src="img/slick-slide01.png" >
+                          <img src="img/slick-slide01.png" width="400" height="200">
                       </div>
                       <div>
-                          <img src="img/slick-slide02.png">
+                          <img src="img/slick-slide02.png" width="400" height="200">
                       </div>
                       <div>
-                          <img src="img/slick-slide03.png">
+                          <img src="img/slick-slide03.png" width="400" height="200">
                       </div>
                        <div>
-                          <img src="img/slick-slide01.png">
+                          <img src="img/slick-slide01.png" width="400" height="200">
                       </div>
                       <div>
-                          <img src="img/slick-slide02.png">
+                          <img src="img/slick-slide02.png" width="400" height="200">
                       </div>
                       <div>
-                          <img src="img/slick-slide03.png">
+                          <img src="img/slick-slide03.png" width="400" height="200">
                       </div>
                       
                     </div>
