--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
                     <li class="nav-item"><a href="">contact us</a></li>
                 </ul>
                 <form class="contact-form">
-                    <textarea placeholder="type your message here"></textarea>
-                    <button>SEND</button>
+                     <textarea id="textarea-top"class="textarea" required=""></textarea>
+                     <label for="#textarea-top">type your message here</label>
+                     <input class="contact-form-button" type="submit" value="send"/>
                 </form>
             </header>
             	     
@@ -93,9 +94,10 @@
                 <footer class="footer">
                     <h2 class="title">CONTACT US</h2>
                     <form class="contact-form">
-                            <textarea placeholder="type your message here"></textarea>
-                            <button>SEND</button>
-                        </form>         
+                            <textarea id="textarea-bottom" class="textarea" required=""></textarea>
+                            <label for="#textarea-bottom">type your message here</label>
+                            <input class="contact-form-button" type="submit"  value="send"/>
+                    </form>          
                 </footer> 
             </div>        
         </div>
